    (previously it was saved to the Desktop)
* More reliable database saving process.
* More accurate detection of the presence of a checksum string in the clipboard (for file verification).
* Added support for checking using the outdated (but still used) MD5 algorithm.
* Added the ability to exclude shortcuts and symbolic links from the list of files.

Internal changes:
* The way of processing JSON file data has been redesigned.
* The file filtering system now has attributes.
* Switched to CMake-only.

---
Veretino 0.5.2
* Implemented the ability to detect Moved files.
    Added item Status: "Moved". It will mark renamed or moved files [if enabled in settings].
    An item will be marked with the "Moved" status if its computed checksum matches any Missing item's one.
* Implemented the ability to Import checksums from existing Branches (subfolder databases) and Digest files.
    This can only be done for New Items. Once completed, they are assigned a new status: Imported.
    Further work with them is no different from parsed ones.
* DateTime stamp inheritance during Branching has become a bit smarter.
    If the selected subfolder contains only checked and matched items, the Branch will be created with a new timestamp, as a new DB.
* Improved Presets for filterable file types.
* Minor improvements to UI and dialog boxes.
* Multiple minor optimizations.

---
Veretino 0.5.1
* Fixed saving the DB file name prefix.
* Optimization of manual input of the filtered types list.

---
Veretino 0.5.0
What's new:
* New Database Creation Dialog, combining basic settings and filter creation.
* A newly creating database can be flagged as immutable ("Deny Changes"), which will prevent changes to it in the future.
* Improved file type filter creation process.
    Instead of a Permanent filter, selected extensions can be flexibly remembered between sessions, adapting to the contents of working folders.