@@ -18,6 +18,7 @@ const QString Settings::s_key_dbFlagConst = "dbFlagConst";
 const QString Settings::s_key_instantSaving = "instantSaving";
 const QString Settings::s_key_considerDateModified = "considerDateModified";
 const QString Settings::s_key_detectMoved = "detectMoved";
+const QString Settings::s_key_allowPasteIntoDb = "allowPasteIntoDb";
 
 // history
 const QString Settings::s_key_history_lastFsPath = "history/lastFsPath";
@@ -104,6 +105,7 @@ void Settings::saveSettings()
     storedSettings.setValue(s_key_instantSaving, instantSaving);
     storedSettings.setValue(s_key_considerDateModified, considerDateModified);
     storedSettings.setValue(s_key_detectMoved, detectMoved);
+    storedSettings.setValue(s_key_allowPasteIntoDb, allowPasteIntoDb);
 
     // filter
     storedSettings.setValue(s_key_filter_mode, filter_mode);
@@ -145,6 +147,7 @@ void Settings::loadSettings()
     instantSaving = storedSettings.value(s_key_instantSaving, defaults.instantSaving).toBool();
     considerDateModified = storedSettings.value(s_key_considerDateModified, defaults.considerDateModified).toBool();
     detectMoved = storedSettings.value(s_key_detectMoved, defaults.detectMoved).toBool();
+    allowPasteIntoDb = storedSettings.value(s_key_allowPasteIntoDb, defaults.allowPasteIntoDb).toBool();
 
     // filter
     filter_mode = static_cast<FilterMode>(storedSettings.value(s_key_filter_mode, FilterMode::NotSet).toInt());
