@@ -38,6 +38,7 @@ public:
     bool dbFlagConst = false;
     bool considerDateModified = true;
     bool detectMoved = false;
+    bool allowPasteIntoDb = false;
 
     FilterMode filter_mode = FilterMode::NotSet;
     QStringList filter_last_exts;
@@ -67,6 +68,7 @@ private:
     static const QString s_key_instantSaving;
     static const QString s_key_considerDateModified;
     static const QString s_key_detectMoved;
+    static const QString s_key_allowPasteIntoDb;
     static const QString s_key_history_lastFsPath;
     static const QString s_key_history_recentDbFiles;
     static const QString s_key_view_geometry;
